// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ignores non app-specific settings 1`] = `
Object {
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "overridden",
  "APP_TEST_PATH": "one/two/three.js",
  "NODE_ENV": "test",
}
`;

exports[`Ignores non app-specific settings 2`] = `
Object {
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "\\"overridden\\"",
  "APP_TEST_PATH": "\\"one/two/three.js\\"",
  "NODE_ENV": "\\"test\\"",
}
`;

exports[`Prevents translation of booleans when disabled 1`] = `
Object {
  "APP_DEBUG": "true",
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "overridden",
  "APP_TEST_PATH": "one/two/three.js",
  "NODE_ENV": "test",
}
`;

exports[`Prevents translation of booleans when disabled 2`] = `
Object {
  "APP_DEBUG": "\\"true\\"",
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "\\"overridden\\"",
  "APP_TEST_PATH": "\\"one/two/three.js\\"",
  "NODE_ENV": "\\"test\\"",
}
`;

exports[`Supports filtering envs to export 1`] = `
Object {
  "APP_DATA_JUSTME": "blue",
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "NODE_ENV": "test",
}
`;

exports[`Supports filtering envs to export 2`] = `
Object {
  "APP_DATA_JUSTME": "\\"blue\\"",
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "NODE_ENV": "\\"test\\"",
}
`;

exports[`Supports manually defined envs 1`] = `
Object {
  "APP_DATA": "yellow",
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "overridden",
  "APP_TEST_PATH": "one/two/three.js",
  "NODE_ENV": "test",
}
`;

exports[`Supports manually defined envs 2`] = `
Object {
  "APP_DATA": "\\"yellow\\"",
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "\\"overridden\\"",
  "APP_TEST_PATH": "\\"one/two/three.js\\"",
  "NODE_ENV": "\\"test\\"",
}
`;

exports[`Supports translation of booleans 1`] = `
Object {
  "APP_DEBUG": true,
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "overridden",
  "APP_TEST_PATH": "one/two/three.js",
  "NODE_ENV": "test",
}
`;

exports[`Supports translation of booleans 2`] = `
Object {
  "APP_DEBUG": "true",
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "\\"overridden\\"",
  "APP_TEST_PATH": "\\"one/two/three.js\\"",
  "NODE_ENV": "\\"test\\"",
}
`;

exports[`Supports translation of numbers 1`] = `
Object {
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "overridden",
  "APP_TEST_PATH": "one/two/three.js",
  "APP_VERSION": 1.6,
  "NODE_ENV": "test",
}
`;

exports[`Supports translation of numbers 2`] = `
Object {
  "APP_ROOT": Any<String>,
  "APP_SOURCE": Any<String>,
  "APP_TEST_OVERRIDE": "\\"overridden\\"",
  "APP_TEST_PATH": "\\"one/two/three.js\\"",
  "APP_VERSION": "1.6",
  "NODE_ENV": "\\"test\\"",
}
`;
